--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nolufefe's Personal Site</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="nolufefe-modified.png" alt="nolufefe's profile picture" />
+          <img
+            src="images/nolufefe-modified.png"
+            alt="nolufefe's profile picture"
+          />
         </td>
         <td>
           <h1>Nolufefe Ludidi</h1>
@@ -76,6 +80,10 @@
 
     <h4>Techinal Experience</h4>
     <ol>
+      <li>
+        Dev Bible (2021) - A webpage for upskilling. Skills for now plain HTML
+        <a href="devbibile.html "  target="_blank"> Dev Bible</a>
+      </li>
       <li>
         House of Prayer (2017) - A web site of women that prays for people from
         all works of life that have challenges who are seeking for a
