--- a/index.html
+++ b/index.html
@@ -4,181 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nolufefe's Personal Site</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Nolufefe Ludidi</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <table cellspacing="20">
-      <tr>
-        <td>
-          <img
-            src="images/nolufefe-modified.png"
-            alt="nolufefe's profile picture"
-          />
-        </td>
-        <td>
-          <h1>Nolufefe Ludidi</h1>
-          <p><em>Junior Web Developer</em></p>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <h1>I'm Nolufefe</h1>
+      <h2>A Web Developer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+      <img src="images/mountain.png" alt="mountain-img" />
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/nolufefe-modified.png" alt="" />
+        <h2>Hello.</h2>
+        <p class="intro">
+          I am Web Developer, I hold a Bsc in Information Technology degree.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img" src="images/coding.jfif" alt="" />
+          <h3>Progamming Languages</h3>
           <p>
-            I am Web Developer, I hold a Bsc in Information Technology degree
+            HTML5, PHP, MYSQL, Java, JavaScript, Adobe Dreamweaver, Photoshop,
+            CSS3, SQL Developer (Oracle), <br />
+            Spring Framework, Rest APIs, C#, Bootstrap, Vue.JS, Angular
           </p>
-          <p>Link to: <a href="contact.html">Contat Information</a></p>
-        </td>
-      </tr>
-    </table>
+        </div>
+        <div class="skill-row">
+          <img class="hobby-img" src="images/wines.jfif" alt="" />
+          <h3>Interests</h3>
+          <p>I love exploring wine farms</p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:nolufefe.ludidi@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
-    <hr />
-    <h3>Education</h3>
-    <h4>Tertiary Level</h4>
-    <p>2013-2016 - CTI Education Group</p>
-    <hr />
-    <table border="1">
-      <thead>
-        <tr>
-          <th>Online Course</th>
-          <th>The site</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>The Complete 2021 Web Development Bootcamp | Udemy</td>
-          <td>
-            <a
-              href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
-              alt="web development bootcomp"
-              target="_blank"
-              >Site</a
-            >
-          </td>
-        </tr>
-        <tr>
-          <td>Azure Fundamentals</td>
-          <td>
-            <a
-              href="https://docs.microsoft.com/en-us/learn/certifications/exams/az-900"
-              alt="azure fundamentals az-900"
-              target="_blank"
-              >Site</a
-            >
-          </td>
-        </tr>
-        <tr>
-          <td>MongoDB Developer Courses</td>
-          <td>
-            <a
-              href="https://university.mongodb.com/courses/catalog?focus=Developer%20Courses"
-              alt="mongodb developer course"
-              target="_blank"
-              >Site</a
-            >
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <hr />
-
-    <h4>Techinal Experience</h4>
-    <ol>
-      <li>
-        Dev Bible (2021) - A webpage for upskilling. Skills for now plain HTML
-        <a href="devbibile.html "  target="_blank"> Dev Bible</a>
-      </li>
-      <li>
-        House of Prayer (2017) - A web site of women that prays for people from
-        all works of life that have challenges who are seeking for a
-        breakthrough. Skills: Webhost Godaddy, Godaddy Web builder.
-      </li>
-      <li>
-        Android application (2016) - An application with three options where
-        users can choose between two games or use a calculator. Skills: Android
-        Studio, Java.
-      </li>
-      <li>
-        Promotions Website (2016) - With an administrator side using CRUD
-        operations having the ability to update the website’s content. User
-        having an ability to send form to apply to become a promoter. Skills:
-        JavaScript, HTML5, Bootstrap, MySQL, CSS3 and PHP, Xammp control panel.
-      </li>
-      <li>
-        E-commerce Website (2016) - Users having the ability to make bookings
-        and the administrator updating information on the website. Skills:
-        JavaScript, HTML5, Bootstrap, MySQL, CSS3 and PHP, Xammp control panel.
-      </li>
-      <li>
-        Software Development Project 3 (2016) - Stock Management System for a
-        bar, allowing users to do stock-take and generates reports. The system
-        converts bottles brandy, and vodka into shots. It was a team project; I
-        was involved in the documenting, and testing of the system. However, I
-        also contributed in the development of the system. Skills: System
-        Testing, Documenting, Java, MySQL, Microsoft suite.
-      </li>
-      <li>
-        Software Development Project 2 (2015) - Student accommodation Website,
-        calculated water and electricity rates and the hours of a student inside
-        the premises. Skills: System Testing, Documenting, Java, MySQL, PHP,
-        HTML, CSS, Tomcat Apache, Microsoft suite
-      </li>
-    </ol>
-    <hr />
-    <h3>Skills</h3>
-    <table cellspacing="20">
-      <tr>
-        <td>HTML5</td>
-        <td>★★★★</td>
-      </tr>
-      <tr>
-        <td>PHP</td>
-        <td>★★</td>
-      </tr>
-      <tr>
-        <td>MYSQL</td>
-        <td>★★</td>
-      </tr>
-      <tr>
-        <td>Java</td>
-        <td>★★★</td>
-      </tr>
-      <tr>
-        <td>JavaScript</td>
-        <td>★★</td>
-      </tr>
-      <tr>
-        <td>CSS3</td>
-        <td>★★★</td>
-      </tr>
-      <tr>
-        <td>Photoshop</td>
-        <td>★★</td>
-      </tr>
-      <tr>
-        <td>C#</td>
-        <td>★</td>
-      </tr>
-      <tr>
-        <td>Bootstrap</td>
-        <td>★★</td>
-      </tr>
-      <tr>
-        <td>Vue.JS</td>
-        <td>★</td>
-      </tr>
-      <tr>
-        <td>Angular</td>
-        <td>★</td>
-      </tr>
-      <tr>
-        <td>Kentico</td>
-        <td>★★★</td>
-      </tr>
-    </table>
-
-    <p><em>Tools</em></p>
-    <p>
-      MS Visio, XAMPP, Microsoft Server 2008, Interface Builder, Android Studio,
-      Microsoft Suite, Confluence. JIRA, Jenkins, IDEs(Netbeans and Intellij),
-      SVN, Putty, Visual Studio 2019, Visual Studio Code, Kentico (CMS), Kibana,
-      Adobe Dreamweaver,
-    </p>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© 2021 Nolufefe Ludidi.</p>
+    </div>
   </body>
 </html>
