--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           <img class="hobby-img" src="images/wines.jfif" alt="" />
           <h3>Interests</h3>
           <p>I love exploring wine farms</p>
+           <p>
+            I am currently upskilling the following is the
+            <a href="devbibile.html" target="_blank">Dev bible</a> I am busy
+            with
+          </p>
         </div>
       </div>
       <hr />
